PaKiani-task/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pakiani-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pakiani-app
  template:
    metadata:
      labels:
        app: pakiani-app
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
        - name: pakiani-app
          image: registry.gitlab.com/pakiani/cicd-students-tasks/pakiani-python-app:latest
          ports:
            - containerPort: 5000
