PaKiani-task/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pakiani-service
spec:
  selector:
    app: pakiani-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
